# GadiOps

GadiOps/: gadiops.db  main.py  pyproject.toml  requirements.txt
GadiOps/backend/: seed.py
GadiOps/backend/app/: main.py
GadiOps/backend/app/core/: database.py  security.py
GadiOps/backend/app/models/: __init__.py  driver.py  expense.py  trip.py  user.py  vehicle.py
GadiOps/backend/app/routers/: auth.py  dashboard.py  drivers.py  expenses.py  trips.py  vehicles.py
GadiOps/backend/app/schemas/: auth.py  driver.py  expense.py  trip.py  vehicle.py
GadiOps/backend/app/services/: analytics_service.py  maintenance_service.py  trip_service.py
GadiOps/frontend/: index.html  test.html
GadiOps/frontend/assets/css/: dark-mode.css  styles.css
GadiOps/frontend/assets/js/: api.js  auth.js  dashboard.js  trips.js  utils.js
GadiOps/frontend/templates/: dashboard.html  drivers.html  expenses.html  login.html  trips.html  vehicles.html
